--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
   "require": {
     "php": ">=5.4",
     "composer/installers": "~1.0",
-    "afragen/translations-updater": "dev-master"
+    "afragen/translations-updater": "dev-edd-sl"
   },
   "autoload": {
     "psr-4": {
